Cabal-Version: 3.8
Name:          PHANE-PhyloLib
Version:       0.1.0
Stability:     Alpha
Build-Type:    Simple
Tested-With:
  GHC == 9.6.2
  GHC == 9.4.5
  GHC == 9.2.8

Author:        Ward Wheeler <wheeler@amnh.org>
Copyright:     © 2015 Ward Wheeler and The American Museum of Natural History
License:       BSD-3-Clause
License-File:  LICENSE

Maintainer:    Ward Wheeler <wheeler@amnh.org>
Homepage:      https://github.com/AMNH/PHANE/blob/main/doc/ReadMe/PhyloLib.md
Bug-Reports:   https://github.com/AMNH/PHANE/issues

Source-Repository head
  type:        git
  location:    git://github.com/AMNH/PHANE.git
  subdir:      pkg/PHANE-PhyloLib

Extra-Doc-Files:
  CHANGELOG.md
  README.md


Flag test-osx
  Description: Apply extremely agressive and extremely time consuming optimization but no llvm
    Default:     False
    Manual:      True

Library

  Default-Language:
    GHC2021

  Hs-Source-Dirs:
    src

  Build-Depends:
    array >= 0.5.4 && < 0.6,
    base >= 4.11 && < 5.0,
    bv >= 0.5 && < 1.0,
    bv-little >= 1.3 && < 2.0,
    containers >= 0.6.2 && < 1.0,
    deepseq >= 1.4 && < 2.0,
    fgl >= 5.8 && < 6.0,
    graphviz >= 2999.20 && < 3000,
    parallel >= 3.2 && < 4.0,
    random >= 1.2 && < 2.0,
    sort >= 1.0 && < 2.0,
    text >= 1.2 && < 3.0,
    time >= 1.12 && < 2.0,
    vector >= 0.12.0.3 && < 1.0,

  Exposed-Modules:
    Cyclic
    GeneralUtilities
    GraphFormatUtilities
    LocalSequence
    ParallelUtilities
    SymMatrix
    SymMatrixSeq

  Ghc-Options:
    -O2
    -feager-blackholing
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -fmax-simplifier-iterations=16
    -foptimal-applicative-do
    -fspec-constr-count=8
    -fspec-constr-keen
    -fspecialize-aggressively
    -fstatic-argument-transformation

    -- Sanity check warnings:
    --   1. Fail on a warning
    --   2. Include all warnings by default
    --   3. Exclude the undesirable warnings
    -- -Werror
    -Weverything
    -- Exclusions:
    -feager-blackholing
    -O2
    -Wall
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-type-defaults
    -Wno-unsafe

  If flag(test-osx)
    Ghc-Options:
--      -fllvm
