Cabal-Version: 3.8
Name:          PHANE-alphabet
Version:       0.1.0
Build-Type:    Simple
Tested-With:
  GHC == 9.6.2
  GHC == 9.4.5
  GHC == 9.2.8

Author:        Alex Washburn <github@recursion.ninja>
Copyright:     © 2022 Ward Wheeler and The American Museum of Natural History
License:       BSD-3-Clause
License-File:  LICENSE

Maintainer:    Ward Wheeler <wheeler@amnh.org>
Homepage:      https://github.com/AMNH/PHANE/blob/main/doc/ReadMe/Alphabet.md
Bug-Reports:   https://github.com/AMNH/PHANE/issues

Synopsis:      Specifies the construction and semantics of an alphabet of symbols.
Description:
  Please see the [README on GitHub](https://github.com/AMNH/PHANE/tree/main/pkg/PHANE-alphabet#readme).

Source-Repository head
  Type:        git
  Location:    git://github.com/AMNH/PHANE.git
  Subdir:      pkg/PHANE-alphabet


Flag Optimize
  Description: Compile with full optimizations
  Default:     False
  Manual:      True


Flag Forego-Sanity
  Description: Compile with full optimizations
  Default:     False
  Manual:      True


Common ghc-flags

  Ghc-Options:
    -fdiagnostics-color=always
    -fhide-source-paths
    -j

  Ghc-Prof-Options:
    -fprof-auto
    -fprof-cafs
    -optc
    -rdynamic

  If !flag(Optimize)
    Ghc-Options:
      -O0
  Else
    Ghc-Options:
      -O2
      -threaded
      -- Optimization flags
      -fexcess-precision
      -fexpose-all-unfoldings
      -flate-specialise
      -fmax-simplifier-iterations=16
      -foptimal-applicative-do
      -fspec-constr-count=8
      -fspec-constr-keen
      -fspecialize-aggressively
      -fstatic-argument-transformation

  If !flag(Forego-Sanity)
    Ghc-Options:
      -- Sanity check warnings
      --   1. Include all warnings by default
      -Weverything
      --   2. Exclude the undesirable warnings
      -Wno-all-missed-specialisations
      -Wno-implicit-prelude
      -Wno-inferred-safe-imports
      -Wno-missing-import-lists
      -Wno-missing-safe-haskell-mode
      -Wno-monomorphism-restriction
      -Wno-redundant-bang-patterns
      -Wno-type-defaults
      -Wno-unsafe

  If !flag(Forego-Sanity) && impl(ghc >=9.2)
    Ghc-Options:
      -Wno-missing-kind-signatures

  If !flag(Forego-Sanity) && impl(ghc >=9.4)
    Ghc-Options:
      -Wno-redundant-strictness-flags


Common language-specs

  Default-Extensions:
    DerivingStrategies
    NoGeneralizedNewtypeDeriving

  Default-Language:
    GHC2021


Library

  Import:
    ghc-flags,
    language-specs,

  Build-Depends:
    PHANE-alphabet:core,
    base >= 4.11 && < 5.0,
    bimap >= 0.3 && < 1.0,
    containers >= 0.6.2 && < 1.0,
    vector >= 0.12.0.3 && < 1.0,

  Exposed-Modules:
    Data.Alphabet
    Data.Alphabet.Codec
    Data.Alphabet.IUPAC
    Data.Alphabet.Special
  
  Reexported-Modules:
    Data.Alphabet.Gap

  Hs-Source-Dirs:
    src/lib


Library core

  Import:
    ghc-flags,
    language-specs,

  Build-Depends:
    PHANE-measure-units,
    base >= 4.11 && < 5.0,
    containers >= 0.6.2 && < 1.0,
    deepseq >= 1.4 && < 2.0,
    hashable >= 1.3 && < 2.0,
    mtl >= 2.2.2 && < 3.0,
    vector >= 0.12.0.3 && < 1.0,

  Exposed-Modules:
    Data.Alphabet.Gap
    Data.Alphabet.Internal

  Hs-Source-Dirs:
    src/core

  Visibility:
    private


test-suite test-suite-alphabet

  Import:
    ghc-flags,
    language-specs,

  Main-Is:
    TestSuite.hs

  Type:
    exitcode-stdio-1.0

  Hs-Source-Dirs:
    test

  Build-depends:
    PHANE-alphabet:core,
    base >= 4.11 && < 5.0,
    containers >= 0.6.2 && < 1.0,
    tasty >= 1.2 && < 2.0,
    tasty-hunit >= 0.10 && < 1.0,
    tasty-quickcheck >= 0.9 && < 1.0,
    tasty-rerun >= 1.1.14 && < 2.0,

  Other-Modules:
    Data.Alphabet.Test