Cabal-Version: 3.8
Name:          PHANE-measure-units
Version:       0.1.0
Build-Type:    Simple
Tested-With:
  GHC == 9.6.2
  GHC == 9.4.5
  GHC == 9.2.8

Author:        Alex Washburn <github@recursion.ninja>
Copyright:     © 2022 Ward Wheeler and The American Museum of Natural History
License:       BSD-3-Clause
License-File:  LICENSE

Maintainer:    Ward Wheeler <wheeler@amnh.org>
Homepage:      https://github.com/AMNH/PHANE/blob/main/doc/ReadMe/Measure-Units.md
Bug-Reports:   https://github.com/AMNH/PHANE/issues

Synopsis:      Units of measure used by the [PHANE project](https://github.com/AMNH/PHANE#readme).
Description:
  Please see the [README on GitHub](https://github.com/AMNH/PHANE/tree/main/pkg/PHANE-measure-units#readme).

Source-Repository head
  Type:        git
  Location:    git://github.com/AMNH/PHANE.git
  Subdir:      pkg/PHANE-measure-units


Flag Optimize
  Description: Compile with full optimizations
  Default:     False
  Manual:      True


Flag Forego-Sanity
  Description: Compile with full optimizations
  Default:     False
  Manual:      True


Common ghc-flags

  Ghc-Options:
    -fdiagnostics-color=always
    -fhide-source-paths
    -j

  Ghc-Prof-Options:
    -fprof-auto
    -fprof-cafs
    -optc
    -rdynamic

  If !flag(Optimize)
    Ghc-Options:
      -O0
  Else
    Ghc-Options:
      -O2
      -threaded
      -- Optimization flags
      -fexcess-precision
      -fexpose-all-unfoldings
      -flate-specialise
      -fmax-simplifier-iterations=16
      -foptimal-applicative-do
      -fspec-constr-count=8
      -fspec-constr-keen
      -fspecialize-aggressively
      -fstatic-argument-transformation

  If !flag(Forego-Sanity)
    Ghc-Options:
      -- Sanity check warnings
      --   1. Include all warnings by default
      -Weverything
      --   2. Exclude the undesirable warnings
      -Wno-all-missed-specialisations
      -Wno-implicit-prelude
      -Wno-inferred-safe-imports
      -Wno-missing-import-lists
      -Wno-missing-safe-haskell-mode
      -Wno-monomorphism-restriction
      -Wno-redundant-bang-patterns
      -Wno-type-defaults
      -Wno-unsafe

  If !flag(Forego-Sanity) && impl(ghc >=9.2)
    Ghc-Options:
      -Wno-missing-kind-signatures

  If !flag(Forego-Sanity) && impl(ghc >=9.4)
    Ghc-Options:
      -Wno-redundant-strictness-flags


Common language-specs

  Default-Extensions:
    DerivingStrategies
    NoGeneralizedNewtypeDeriving
    UnicodeSyntax
    
  Default-Language:
    GHC2021


Library

  Import:
    ghc-flags,
    language-specs,

  Build-Depends:
    base >= 4.11 && < 5.0,
    deepseq >= 1.4 && < 2.0,
    hashable >= 1.3 && < 2.0,

  Exposed-Modules:
    Measure.Unit.AlignmentCost
    Measure.Unit.StateChangeCost
    Measure.Unit.SymbolChangeCost
    Measure.Unit.SymbolCount
    Measure.Unit.SymbolIndex

  Hs-Source-Dirs:
    src
